add get balance and transaction endpoints
