# storage/api-docs/api-docs.json
@@ -19,6 +19,66 @@
         }
     ],
     "paths": {
+        "/balance/all": {
+            "get": {
+                "tags": [
+                    "Balance"
+                ],
+                "summary": "get user balance for all supported coins",
+                "operationId": "get user balance for all supported coins",
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    }
+                },
+                "security": [
+                    {
+                        "apiAuth": []
+                    }
+                ]
+            }
+        },
+        "/balance/{coin}": {
+            "get": {
+                "tags": [
+                    "Balance"
+                ],
+                "summary": "get user balance by a specific coin short name supported coins",
+                "operationId": "get user balance by a specific coin short name supported coins",
+                "parameters": [
+                    {
+                        "name": "coin",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    }
+                },
+                "security": [
+                    {
+                        "apiAuth": []
+                    }
+                ]
+            }
+        },
         "/auth/register": {
             "post": {
                 "tags": [
@@ -346,6 +406,63 @@
                         "description": "Unprocessed Entity"
                     }
                 }
+            }
+        },
+        "/transactions/{coin}/withdraw": {
+            "post": {
+                "tags": [
+                    "Transactions"
+                ],
+                "summary": "withdraw coin to another address",
+                "operationId": "withdraw coin to another address",
+                "parameters": [
+                    {
+                        "name": "coin",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "address",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "amount",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "422": {
+                        "description": "Unprocessed Entity"
+                    }
+                },
+                "security": [
+                    {
+                        "apiAuth": []
+                    }
+                ]
             }
         }
     },
